# server

./: .gitignore  Dockerfile  README.md  pyproject.toml  smithery.yaml
agentmode/: Dockerfile  connector_setup.py  connectors.toml  database.py  form.py  mcp_server.py  smithery.yaml  web_server.py
agentmode/api/: api_connection.py  filter_openapi_specs.py  openapi_to_mcp_converter.py  parse_openapi_specs.py
agentmode/api/connectors/: Airflow.json  Bitbucket.json  Elasticsearch.json  Gitlab.json  Prefect.json
agentmode/resources/css/: custom.css
installation_scripts/: linux.sh  windows.sh
tests/: pytest_mysql_connection.py  start_mysql.sh  test_api_connection.py  test_github.py  test_mysql_connection.py
