[project]
name = "agentmode"
version = "0.1.3"
description = "MCP server for VS code"
readme = "README.md"
requires-python = ">=3.13"
keywords = ["mcp", "ai"]
dependencies = [
    "asyncpg>=0.30.0",
    "click>=8.1.8",
    "gradio>=5.25.2",
    "gradio-toggle>=2.0.2",
    "greenlet>=3.2.0",
    "httpx>=0.28.1",
    "mcp[cli]>=1.6.0",
    "pandas>=2.2.3",
    "python-benedict[toml]>=0.34.1",
    "sqlalchemy>=2.0.40",
    "sqlglot[rs]>=26.16.0",
    "starlette>=0.46.2",
]

[project.scripts]
agentmode = "agentmode:cli"

[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "ruff>=0.11.6",
]

[project.urls]
"Homepage" = "https://www.agentmode.app"
